--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
         <script>
 var resume = {
     name: 'Paul C Roberts',
-    statement: 'I have a record of strong technical leadership and original, creative solutions to complex software design and implementation challenges. I am able to preserve the overarching vision of a project alongside the attention to detail necessary for rapid and successful results.\nI take great pride in my ability to write high quality code rapidly; as a professional developer I have used (in no particular order) C#, C++, C, Python, Go, JavaScript, XSLT, and have a working familiarity with a handful of other languages.',
+    statement: 'I have a record of strong technical leadership and original, creative solutions to complex software design and implementation challenges. I am able to preserve the global vision of a project alongside the attention to detail necessary for rapid and successful results.\nI take great pride in my ability to write high quality code rapidly; as a professional developer I have used (in no particular order) C#, C++, C, Python, Go, JavaScript, XSLT, and have a working familiarity with a handful of other languages.',
     contact: {
         address: '185 Channel St #515\nSan Francisco, CA 94158',
         email: 'pacaro@gmail.com',
