Updated, added publications and patents

--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@ var resume = {
         experience: [
         {
             subtitle: 'Product Security',
-            body: ['Worked on all levels of the Dropbox stack in improving the security of user facing services\nBuilt a authorization monitoring system that allows measurement of authorization invariants at runtime\nCompletely re-implemented production secret distribution: four languages (python, go, c++, java); hundreds of secrets; tens of thousands of servers; 0 down time. New system has better security properties, logging, monitoring, alerting and is more flexible\nFixed vulnerabilities as reported by security researchers\nImplemented robust html whitelisting for transcluded content\nMigrated several hundred legacy admin pages to safer templating language, fixing CSRF and XSS vulnerabilities in the process']
+            body: ['Worked on all levels of the Dropbox stack in improving the security of user facing services\nBuilt an authorization monitoring system that allows measurement of authorization invariants at runtime\nCompletely reimplemented production secret distribution: four languages (python, go, c++, java); hundreds of secrets; tens of thousands of servers; 0 down time. New system has better security properties, logging, monitoring, alerting and is more flexible\nFixed vulnerabilities as reported by security researchers\nImplemented robust html sanitizing for transcluded content\nMigrated several hundred legacy admin pages to safer templating language, fixing CSRF and XSS vulnerabilities in the process']
         },
         { 
             subtitle: 'API Team',
@@ -108,11 +108,86 @@ var resume = {
     }
     ],
     education: [
-    {
-        institution: 'University of Cambridge\nPeterhouse',
-        course: 'BA, History and Philosophy of Science',
-        dates: '1990 - 1993'
-    }
+        {
+            institution: 'University of Cambridge\nPeterhouse',
+            course: 'BA, History and Philosophy of Science',
+            dates: '1990 - 1993'
+        },
+    ],
+    publications: [
+        {
+            title: 'Click Passwords',
+            publisher: 'IFIP International Information Security Conference',
+            date: '2006',
+            uri: 'click-passwords.pdf'
+        },
+        {
+            title: 'Methods and Systems for Generating Encryption Keys Using Random Bit Generators',
+            publisher: 'United States 6931128',
+            date: 'Issued August 6, 2005',
+            uri: 'https://www.google.com/patents/US6931128'
+        },
+        {
+            title: 'Click Passwords',
+            publisher: 'United States 7243239',
+            date: 'Issued July 10, 2007',
+            uri: 'https://www.google.com/patents/US7243239'
+        },
+        {
+            title: 'Push Secure End-To-End Notification',
+            publisher: 'United States 7299349',
+            date: 'Issued November 20, 2007',
+            uri: 'https://www.google.com/patents/US7299349'
+        },
+        {
+            title: 'Systems and Methods for Authenticating a User Interface to a Computer User',
+            publisher: 'United States 7661126',
+            date: 'Issued February 9, 2010',
+            uri: 'https://www.google.com/patents/US7661126'
+        },
+        {
+            title: 'Providing Secure Input And Output To A Trusted Agent In A System With A High-Assurance Execution Environment',
+            publisher: 'United States 7496768',
+            date: 'Issued February 24, 2009',
+            uri: 'https://www.google.com/patents/US7496768'
+        },
+        {
+            title: 'Providing Secure Input to a System with a High-Assurance Execution Environment',
+            publisher: 'United States 7464412',
+            date: 'Issued December 9, 2008',
+            uri: 'https://www.google.com/patents/US7464412'
+        },
+        {
+            title: 'Security State Watcher',
+            publisher: 'United States 7574610',
+            date: 'Issued August 11, 2009',
+            uri: 'https://www.google.com/patents/US7574610'
+        },
+        {
+            title: 'Systems and Methods for Determining If Applications Executing on a Computer System are Trusted',
+            publisher: 'United States 7721094',
+            date: 'Issued May 18, 2010',
+            uri: 'https://www.google.com/patents/US7721094'
+        },
+        {
+            title: 'Systems and Methods for Demonstrating Authenticity of a Virtual Machine Using a Security Image',
+            publisher: 'United States 7565535',
+            date: 'Issued July 21, 2009',
+            uri: 'https://www.google.com/patents/US7565535'
+
+        },
+        {
+            title: 'Distributed Debugging for a Visual Programming Language',
+            publisher: 'United States US-2008-0209405-A1',
+            date: 'Filed August 28, 2008',
+            uri: 'https://www.google.com/patents/US20080209405'
+        },
+        {
+            title: 'Visual Programming Language Optimization',
+            publisher: 'United States US-2009-0064092-A1',
+            date: 'Filed March 5, 2009',
+            uri: 'https://www.google.com/patents/US20090064092'
+        },
     ]
 };
         </script>
