--- a/particle.html
+++ b/particle.html
@@ -12,7 +12,7 @@ body {
 </style>
     </head>
     <body>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
         <script src='particles.js'></script>
     </body>
 </html>
