--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@ var resume = {
     name: 'Paul C Roberts',
     statement: 'I have a record of strong technical leadership and original, creative solutions to complex software design and implementation challenges. I am able to preserve the global vision of a project alongside the attention to detail necessary for rapid and successful results.\nI take great pride in my ability to write high quality code rapidly; as a professional developer I have used (in no particular order) C#, C++, C, Python, Go, JavaScript, XSLT, and have a working familiarity with a handful of other languages.',
     contact: {
-        address: '185 Channel St #515\nSan Francisco, CA 94158',
+        address: '809 Olive Way #2502\nSeattle, WA 98101',
         email: 'pacaro@gmail.com',
         phone: '(425) 301-0678',
         github: 'github.com/pollrobots',
@@ -23,8 +23,22 @@ var resume = {
     },
     jobs: [
     {
+        employer: 'Amazon',
+        from: 'July 2016',
+        title: 'Principal Engineer',
+        technologies: 'C++, Python, Java, Javascript, Computer Vision, Machine Learning,:set  GNU/Linux, git',
+        location: 'Seattle, WA',
+        experience: [
+            {
+                subtitle: 'Amazon Go',
+                body: ['Worked on core technologies for Amazon\'s ground breaking cashierless store. This includes providing technical leadership to one of the core engineering teams as well as working on innovative software to help move the project from research to production.\nWork on this project is under a confidentiality agreement.']
+            }
+        ]
+    },
+    {
         employer: 'Dropbox',
         from: 'May 2013',
+        to: 'June 2016',
         title: 'Software Engineer',
         technologies: 'Python, Go, C++, Java, JavaScript, React, GNU/Linux, git, hg',
         location: 'San Francisco, CA',
@@ -187,6 +201,12 @@ var resume = {
             publisher: 'United States US-2009-0064092-A1',
             date: 'Filed March 5, 2009',
             uri: 'https://www.google.com/patents/US20090064092'
+        },
+        {
+            title: 'Automation of networked devices',
+            publisher: 'United States 9413606',
+            date: 'Issued August 9, 2016',
+            uri: 'https://www.google.com/patents/US9413606'
         },
     ]
 };
