--- a/letsrand.html
+++ b/letsrand.html
@@ -21,4 +21,8 @@
         app.append(head);
         app.append(details);
         return false;
-      });</script></head><body style="font-family: Roboto, Arial, Helvetica, sans-serif;" }><div id="app"></div><script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script><script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script><script src="letsrand.js"></script></body></html>
+      });</script><style>@media print {
+        .hidePrint {
+          display: none !important;
+        }
+      }</style></head><body style="font-family: Roboto, Arial, Helvetica, sans-serif;" }><div id="app"></div><script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script><script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script><script src="letsrand.js"></script></body></html>
