--- a/resume.html
+++ b/resume.html
@@ -1,216 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Paul C Roberts</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.0-rc.2/react.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.0-rc.2/react-dom.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-        <link rel="stylesheet" href="resume.css" />
-    </head>
-    <body>
-        <div id="content"></div>
-        <script>
-var resume = {
-    name: 'Paul C Roberts',
-    statement: 'I have a record of strong technical leadership and original, creative solutions to complex software design and implementation challenges. I am able to preserve the global vision of a project alongside the attention to detail necessary for rapid and successful results.\nI take great pride in my ability to write high quality code rapidly; as a professional developer I have used (in no particular order) C#, C++, C, Python, Go, JavaScript, XSLT, and have a working familiarity with a handful of other languages.',
-    contact: {
-        address: '809 Olive Way #2502\nSeattle, WA 98101',
-        email: 'pacaro@gmail.com',
-        phone: '(425) 301-0678',
-        github: 'github.com/pollrobots',
-        blog: 'pollrobots.blogspot.com'
-    },
-    jobs: [
-    {
-        employer: 'Amazon',
-        from: 'July 2016',
-        title: 'Principal Engineer',
-        technologies: 'C++, Python, Java, Javascript, Computer Vision, Machine Learning,:set  GNU/Linux, git',
-        location: 'Seattle, WA',
-        experience: [
-            {
-                subtitle: 'Amazon Go',
-                body: ['Worked on core technologies for Amazon\'s ground breaking cashierless store. This includes providing technical leadership to one of the core engineering teams as well as working on innovative software to help move the project from research to production.\nWork on this project is under a confidentiality agreement.']
-            }
-        ]
-    },
-    {
-        employer: 'Dropbox',
-        from: 'May 2013',
-        to: 'June 2016',
-        title: 'Software Engineer',
-        technologies: 'Python, Go, C++, Java, JavaScript, React, GNU/Linux, git, hg',
-        location: 'San Francisco, CA',
-        experience: [
-        {
-            subtitle: 'Product Security',
-            body: ['Worked on all levels of the Dropbox stack in improving the security of user facing services\nBuilt an authorization monitoring system that allows measurement of authorization invariants at runtime\nCompletely reimplemented production secret distribution: four languages (python, go, c++, java); hundreds of secrets; tens of thousands of servers; 0 down time. New system has better security properties, logging, monitoring, alerting and is more flexible\nFixed vulnerabilities as reported by security researchers\nImplemented robust html sanitizing for transcluded content\nMigrated several hundred legacy admin pages to safer templating language, fixing CSRF and XSS vulnerabilities in the process']
-        },
-        { 
-            subtitle: 'API Team',
-            body: ['Hack-a-sprint -- Implemented Dropbox api v2 for .Net']
+<!doctype html><html><head><meta charset="UTF-8"/><title>Paul C. Roberts</title><script>window.addEventListener('error', event => {
+        const app = document.getElementById('app');
+        const head = document.createElement('h2');
+        const details = document.createElement('div');
+        if (event.message.toLowerCase().indexOf('script error') >= 0) {
+          head.append('Script Error');
+          details.append('See console for details');
+        } else {
+          head.append('Uncaught Error');
+          const message = [
+            'Message: ' + event.message,
+            'Url: ' + event.filename,
+            'Line: ' + event.lineno + ', column: ' + event.colno,
+            'Error: ' + event.error
+          ];
+          message.forEach(el => {
+            details.append(el);
+            details.append(document.createElement('br'));
+          });
         }
-        ]
-    },
-    {
-        employer: 'Microsoft',
-        from: 'July 1999',
-        to: 'April 2013',
-        title: 'Principal Software Engineer',
-        technologies: 'C#, C, C++, F#, Win32, XAML, JavaScript, XSLT, Perforce, git',
-        location: 'Redmond WA (2002 - 2013), Cambridge UK (1999-2002)',
-        experience: [
-        {
-            subtitle: 'Midori',
-            dates: 'Jan 2012 - April 2013',
-            body: ['An operating systems research project\nRe-wrote the process loader to work with cloud-based binary images']
-        },
-        {
-            subtitle: 'Robotics Initiative',
-            dates: '2005 - 2011',
-            body: [
-                'Designed the architecture and led development for an applied robotics project ("Mars"), including:\nOverall architecture and design for robotics and cloud components\nEngineering quality initiative: patterns and practices; code reviews; code coverage\nWrote application model and hosting: owning and implementing components in C#, C++, ATL, and Silverlight',
-                'Designed the architecture and led development for an applied robotics project ("Marvin") that was presented to the MS Senior Leadership Team in Oct 2009.\nOn a project with 11 developers I wrote ~40% of the new code used to create a functional prototype, including: application lifecycle control; UI and UX (implementation and design tools); application composability; Kodu integrations',
-                'Worked as part of the team that defined and shipped Microsoft Robotics Developer Studio from the first CTP in June 2006, through to the final release. I worked on all layers of the system\nFixing bugs and extending CCR and DSS\nWriting services to interact with a wide variety or robotics hardware\nWriting services to simulate hardware in a virtual environment\nVision processing services\nTutorials and documentation\nMicrosoft VPL - a dataflow language for robotics orchestrations, implemented: interpreted runtime; transpiler; remote debugger'
-            ]
-        },
-        {
-            subtitle: 'Windows Security',
-            dates: '2002-2005',
-            body: [
-                'Lead developer for the UI/UX for BitLocker full volume encryption\nControl panel, Wizard, MMC snap-in, internal tools',
-                'Working on the UI/UX for a secure operating system.\nRed-Green project, building working prototype including ActiveX, Virtual Server, WMI\nDefined basic axioms for creating a secure UI in a hypervisor environment\nMechanisms for defending against various levels of spoofing attack on a system with Secure IO\nCreated Secure UI architecture for the Palladium/NGSCB platform\nLead a team of developers to create working UI prototypes for Palladium\nHelped develop and implement HASE methodologies within the team, mentoring developers on best practice.']
-        },
-        {
-            subtitle: 'Wireless Telephony Group, Europe',
-            dates: '1999 - 2002',
-            body: ['Developing micro-browser software, targeting embedded platforms with as little as 32KiB RAM\nResponsible for security protocol implementations for Mobile Explorer (a platform agnostic micro-browser), implemented WTLS and SSL\nParticipated in the Security SIG at the WAP forum\nImplemented clean-room JPEG, GIF, and PNG decoders\nImplemented WMLScript - both compiler and runtime\nMaintained and developed core architecture of codebase that was used by 3 different projects across 9 different hardware platforms, using HASE methodologies']
-        }
-        ]
-    },
-    {
-        employer: 'STNC Ltd',
-        from: 'Oct 1997',
-        to: 'July 1999',
-        title: 'Senior Software Engineer',
-        technologies: 'C, C++, GOC, Epoc-32',
-        location: 'Cambridge, UK',
-        experience: [
-        {
-            subtitle: 'Micro-browser development',
-            body: ['Developing mobile web and WAP browser technologies for cell phones\nCode reviews and architectural presentations to Microsoft as part of acquisition\nImplemented ECMAScript (Edition 2)\nWorked on core micro-browser technologies: demonstrated W3C compliant graphical browser on a cell phone in 1998, shipped web technologies in Symbian EPOC-32, upgraded browser to work on Geoworks GEOS'
-            ]
-        }
-        ]
-    },
-    {
-        employer: 'Systems Options Ltd',
-        from: 'March 1994',
-        to: 'Oct 1997',
-        title: 'Analyst Programmer',
-        technologies: 'C, C++, Win16, COM/OLE',
-        location: 'Aldershot, UK',
-        experience: [
-        {
-            subtitle: 'Working on Desktop GIS software',
-            body: [
-                'Win16, COM and OLE2 development, spatial analysis, data visualization, legacy database integration, initial web-server interfaces'
-            ]
-        }
-        ]
-    }
-    ],
-    education: [
-        {
-            institution: 'University of Cambridge\nPeterhouse',
-            course: 'BA, History and Philosophy of Science',
-            dates: '1990 - 1993'
-        },
-    ],
-    publications: [
-        {
-            title: 'Click Passwords',
-            publisher: 'IFIP International Information Security Conference',
-            date: '2006',
-            uri: 'click-passwords.pdf'
-        },
-        {
-            title: 'Methods and Systems for Generating Encryption Keys Using Random Bit Generators',
-            publisher: 'United States 6931128',
-            date: 'Issued August 6, 2005',
-            uri: 'https://www.google.com/patents/US6931128'
-        },
-        {
-            title: 'Click Passwords',
-            publisher: 'United States 7243239',
-            date: 'Issued July 10, 2007',
-            uri: 'https://www.google.com/patents/US7243239'
-        },
-        {
-            title: 'Push Secure End-To-End Notification',
-            publisher: 'United States 7299349',
-            date: 'Issued November 20, 2007',
-            uri: 'https://www.google.com/patents/US7299349'
-        },
-        {
-            title: 'Systems and Methods for Authenticating a User Interface to a Computer User',
-            publisher: 'United States 7661126',
-            date: 'Issued February 9, 2010',
-            uri: 'https://www.google.com/patents/US7661126'
-        },
-        {
-            title: 'Providing Secure Input And Output To A Trusted Agent In A System With A High-Assurance Execution Environment',
-            publisher: 'United States 7496768',
-            date: 'Issued February 24, 2009',
-            uri: 'https://www.google.com/patents/US7496768'
-        },
-        {
-            title: 'Providing Secure Input to a System with a High-Assurance Execution Environment',
-            publisher: 'United States 7464412',
-            date: 'Issued December 9, 2008',
-            uri: 'https://www.google.com/patents/US7464412'
-        },
-        {
-            title: 'Security State Watcher',
-            publisher: 'United States 7574610',
-            date: 'Issued August 11, 2009',
-            uri: 'https://www.google.com/patents/US7574610'
-        },
-        {
-            title: 'Systems and Methods for Determining If Applications Executing on a Computer System are Trusted',
-            publisher: 'United States 7721094',
-            date: 'Issued May 18, 2010',
-            uri: 'https://www.google.com/patents/US7721094'
-        },
-        {
-            title: 'Systems and Methods for Demonstrating Authenticity of a Virtual Machine Using a Security Image',
-            publisher: 'United States 7565535',
-            date: 'Issued July 21, 2009',
-            uri: 'https://www.google.com/patents/US7565535'
-
-        },
-        {
-            title: 'Distributed Debugging for a Visual Programming Language',
-            publisher: 'United States US-2008-0209405-A1',
-            date: 'Filed August 28, 2008',
-            uri: 'https://www.google.com/patents/US20080209405'
-        },
-        {
-            title: 'Visual Programming Language Optimization',
-            publisher: 'United States US-2009-0064092-A1',
-            date: 'Filed March 5, 2009',
-            uri: 'https://www.google.com/patents/US20090064092'
-        },
-        {
-            title: 'Automation of networked devices',
-            publisher: 'United States 9413606',
-            date: 'Issued August 9, 2016',
-            uri: 'https://www.google.com/patents/US9413606'
-        },
-    ]
-};
-        </script>
-        <script type="text/babel" src="resume.js"></script>
-    </body>
-</html>
+        app.append(head);
+        app.append(details);
+        return false;
+      });</script><link rel="stylesheet" href="main.css"/><script defer="defer" src="main.97d7e81016b941e27d17.js"></script><link href="main.css" rel="stylesheet"></head><body><div id="app"></div><script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script><script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script></body></html>
